--- a/connexease-ai-agent/package.json
+++ b/connexease-ai-agent/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.2",
     "csv-parser": "^3.2.0",
