--- a/connexease-ai-agent/package.json
+++ b/connexease-ai-agent/package.json
@@ -15,12 +15,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@google-cloud/vertexai": "^1.10.0",
-    "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.2",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "openai": "^6.1.0",
     "ws": "^8.18.3",
     "xlsx": "^0.18.5"
   }
